ADD_EXAMPLE(fmt_constants)
#ADD_EXAMPLE(get_line)
ADD_EXAMPLE(get_file)
ADD_EXAMPLE(loadnpy)
ADD_EXAMPLE(loadtxt)
ADD_EXAMPLE(open)
ADD_EXAMPLE(savenpy)
ADD_EXAMPLE(savetxt)
# ADD_EXAMPLE(input) -- Interactive example, do not run as test
add_executable(example_input example_input.f90)
target_link_libraries(example_input "${PROJECT_NAME}")
